REMOVED rtl and google oauth

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -41,9 +41,7 @@
   },
 
   "home": {
-    "searchKnowledgeBase": "Search the knowledge base",
-
-    "featuredArticles"   : "Hot topics"
+    "searchKnowledgeBase": "Search the knowledge base"
   },
 
   "login": {
